--- a/GitWebsite/index.html
+++ b/GitWebsite/index.html
@@ -1,2 +1,14 @@
 // Authors: Jason Yao; Edgar Bahena
 // Date: 05/24/2023
+
+
+<html>
+    <head>
+        <title>My First WebPage</title>
+    </head>
+
+    <body>
+
+    </body>
+
+</html>
