--- a/GitWebsite/index.html
+++ b/GitWebsite/index.html
@@ -5,6 +5,17 @@
 <html>
     <head>
         <title>My First Web Page</title>
+        <style>
+            html {
+                font-size: 22 px
+            }
+
+            body {
+                background-color: #333;
+                color: whitesmoke;
+            }
+            
+        </style>
     </head>
 
     <body>
